# exchange-proposal

./: README.md  asgi.py  pyproject.toml  settings.py
ad/: models.py
category/: models.py
exchange_app/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
exchange_app/ad/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
exchange_app/ad/migrations/: 0001_initial.py  0002_initial.py  0003_rename_category_id_ad_category_and_more.py  0004_alter_ad_options_alter_ad_table.py  0005_alter_ad_condition_alter_ad_description_and_more.py  0006_alter_ad_category_alter_ad_owner.py  0007_alter_ad_category_alter_ad_owner.py
exchange_app/ad/templates/ad/: ad_create.html  ad_detail.html  ad_list.html  ads.html
exchange_app/category/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
exchange_app/category/migrations/: 0001_initial.py
exchange_app/category/templates/category/: category_create.html  category_list.html
exchange_app/exchange_proposal/: admin.py  apps.py  forms.py  models.py  serializers.py  urls.py  views.py
exchange_app/exchange_proposal/migrations/: 0001_initial.py  0002_initial.py  0003_rename_ad_id_exchangeproposal_ad_and_more.py  0004_alter_exchangeproposal_options_and_more.py
exchange_app/templates/: base.html  login.html
exchange_app/user/: admin.py  apps.py  forms.py  serializers.py  urls.py  views.py
exchange_app/user/migrations/: 0001_initial.py
exchange_app/user/templates/user/: user_create.html  user_detail.html  users.html
exchange_proposal/: apps.py  models.py
user/: urls.py
